--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -9,7 +9,10 @@
 <body>
     <main class="container">
 
-        <nav  class="container-fluid w-100 fixed-top" style="background-color: #B43E8F; height: 55px;">
+        <nav  class="container-fluid w-100 fixed-top">
+            <div class="col-3">
+                <img th:src="@{/images/Main logo.png" class="w-100 h-100">
+            </div>
 
         </nav>
 
