--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -5,18 +5,19 @@
     <title>Sign Up User</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link th:href="@{/css/signupstyles.css}" type="text/css" rel="stylesheet">
+
 </head>
 <body>
-    <main class="container">
-
-        <nav  class="container-fluid w-100 fixed-top">
+<main class="container">
+        <nav  class="container-fluid w-100 fixed-top h-auto">
+            <div class="row navDiv h-auto" >
             <div class="col-3">
-                <img th:src="@{/images/Main logo.png" class="w-100 h-100">
+                <img th:src="@{/images/Mainlogo.png}" class="w-100 h-100">
             </div>
-
+            </div>
         </nav>
-
-    </main>
+</main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
