--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,23 +1,66 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th = "http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Sign Up User</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
     <link th:href="@{/css/signupstyles.css}" type="text/css" rel="stylesheet">
 
 </head>
-<body>
-<main class="container">
-        <nav  class="container-fluid w-100 fixed-top h-auto">
-            <div class="row navDiv h-auto" >
-            <div class="col-3">
-                <img th:src="@{/images/Mainlogo.png}" class="w-100 h-100">
-            </div>
+
+<body class="container-fluid">
+            <nav class="row navDiv">
+            <div class="row container h-auto">
+                <div class="col-3 navLogo">
+                    <img th:src="@{/images/Mainlogo.png}" class="w-100 h-100">
+                </div>
             </div>
         </nav>
-</main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <div class="row formMain container-fluid">
+
+        <div class="col-sm-8 col-md-5 col-lg-4 col-xl-4 formBox">
+            <form th:action="@{/register}" method="post" th:object="${user}" enctype="multipart/form-data" class="formPart">
+                <div class="form-group">
+                    <label for="exampleFormControlFile1">Profile picture input</label>
+                    <input type="file" class="form-control-file" id="exampleFormControlFile1" name="file">
+                </div>
+                    <div class="form-group">
+                        <label for="firstName">First Name</label>
+                        <input type="text" class="form-control" id="firstName" placeholder="Enter First Name"
+                            th:field="*{firstName}">
+                    </div>
+                        <div class="form-group ">
+                            <label for="lastName">Last Name</label>
+                            <input type="text" class="form-control" id="lastName" placeholder="Enter Last Name"
+                                th:field="*{lastName}">
+                        </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="Enter email" th:field="*{emailId}">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with
+                                    anyone
+                                    else.</small>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1"
+                                    placeholder="Password" th:field="*{password}">
+                            </div>
+
+                            <button type="submit" class="btn">Submit</button>
+
+            </form>
+
+        </div>
+        </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
