--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,11 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Login Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link th:href="@{css/signupstyles.css}" rel="stylesheet" type="text/css">
 </head>
-<body>
-<main class="container">
+<body class="container-fluid">
+<nav class="row navDiv">
+    <div class="row container h-auto navBox">
+        <div class="col-sm-5 col-md-4 col-lg-3 col-xl-2 navLogo">
+            <img th:src="@{/images/Mainlogo.png}" class="w-100 h-auto">
+        </div>
+        <div class="col-3 d-flex justify-content-center align-items-center">
 
-</main>
+            <button class="btn navBtn" th:href="@{/register}">SIGN UP</button>
+
+        </div>
+    </div>
+</nav>
+<div class="row formMain ">
+    <div class="col-sm-6 col-md-5 col-lg-5 col-xl-4 col-xxl-4 formBox">
+        <form th:action="@{/login}" method="post">
+            <div class="form-group">
+                <label for="emailId">Email Id</label>
+                <input type="text" class="form-control" id="emailId" placeholder="Enter Your Email Id" name="emailId">
+            </div>
+            <div class="form-group">
+                <label for="password">password</label>
+                <input type="password" class="form-control" id="password" placeholder="Enter Your Password" name="password">
+            </div>
+            <button type="submit" class="btn submitBtn">Submit</button>
+
+        </form>
+
+    </div>
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
