--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -6,26 +6,23 @@
     <title>Verification</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <style>
-        * {
-            margin: 0%;
-            padding: 0%;
-            box-sizing: border-box;
-        }
-    </style>
+  <link th:href="@{css/signupstyles.css}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <main class="container">
-        <nav class="row container-fluid w-100 d-flex justify-content-center align-items-center">
-            <div class="row navDiv h-auto">
+
+        <nav class="row navDiv">
+            <div class="row container h-auto">
                 <div class="col-3 navLogo">
                     <img th:src="@{/images/Mainlogo.png}" class="w-100 h-100">
                 </div>
+
             </div>
         </nav>
-        <div class="row d-flex justify-content-center align-items-center">
-            <form th:action="@{/verification}" method="post" enctype="text/plain">
+        <div class="row formMain container-fluid">
+            <div class="col-sm-6 col-md-5 col-lg-4 col-xl-4 formBox">
+
+            <form th:action="@{/verification}" method="post">
 
                 <div class="form-group">
                     <label for="otp" >Enter The OTP </label>
@@ -36,10 +33,11 @@
 
             </form>
 
-
+            </div>
         </div>
-
-    </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
