admin part almost done

--- a/src/main/resources/static/css/fragmentstyles.css
+++ b/src/main/resources/static/css/fragmentstyles.css
@@ -19,6 +19,7 @@
 nav {
     background-color: #b43e8f;
     height: 80px;
+    position: fixed;
 }
 
 .navBtn {
@@ -34,6 +35,6 @@ nav {
 }
 
 .navlogo {
-    height: 100%;
+    height: auto;
     width: 100%;
 }
