--- a/src/main/resources/templates/admin/customerList.html
+++ b/src/main/resources/templates/admin/customerList.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Admin Customer List</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Customer List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 </head>
-<body>
-    This is admin customer control
+<body class="container-fluid">
+<div th:replace="fragment::navBarAdminWithSearch"></div>
+<div class="row d-flex justify-content-center align-items-center" th:style="'height: 100vh'">
+<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 container-fluid w-100 overflow-auto">
+    <table class="table text-center col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+        <thead class="thead-dark bg-secondary  text-white">
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Profile Pic</th>
+            <th>Status</th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${userList}">
+            <td th:text="${user.firstName}" class="text-wrap"></td>
+            <td th:text="${user.lastName}"></td>
+            <td th:text="${user.emailId}"></td>
+            <td>
+                <div style="height: 60px; width: 60px">
+                        <img th:src="@{${'/profilePic/'+user.emailId+'/'+user.profilePic}}" style="height:100%;width:100%">
+                </div>
+            </td>
+            <td th:if="${user.userStatus == 'ACTIVE'}" class="text-success">ACTIVE</td>
+            <td th:if="${user.userStatus == 'BLOCKED'}" class="text-danger">BLOCKED</td>
+            <td th:if="${user.userStatus == 'ACTIVE'}" ><a class="btn btn-danger text-decoration-none" th:href="@{customers/block/{id}(id=${user.id})}">BLOCK</a></td>
+            <td th:if="${user.userStatus == 'BLOCKED'}" ><a class="btn btn-success text-decoration-none" th:href="@{customers/unblock/{id}(id=${user.id})}">ACTIVATE</a></td>
+            <td><a th:href="@{customers/update/{id}(id=${user.id})}" class="btn btn-warning">EDIT</a></td>
+            <td><a th:href="@{customers/delete/{id}(id=${user.id})}" class="btn btn-danger">DELETE</a></td>
+
+        </tr>
+        </tbody>
+    </table>
+</div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
