--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -3,24 +3,68 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+     * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        font-family: 'Poppins', sans-serif;
+        }
+     .sideBar {
+        position: fixed;
+        background-color: #d9d9d9;
+        height: 100vh;
+        width: fit-content;
+        padding: 20px 20px;}
+
+
+     .sideBarContent a{
+        color: #b43e8f;
+        text-decoration: none;
+     }
+     .sideBarContent{
+        margin-bottom: 40px;
+     }
+
+    </style>
 </head>
-<body class="container">
-<nav class="row navDiv">
-    <div class="row container h-auto navBox">
-        <div class="col-3 navLogo">
-            <img th:src="@{/images/Mainlogo.png}" class="w-100 h-100">
-        </div>
-        <div class="col-3 d-flex justify-content-center align-items-center">
+<body class="container-fluid">
 
+<div th:replace="~{fragment::navBarAdmin}"></div>
+<div class="row" th:style="'height: 70px;'"></div>
+<div class="sideBar row d-flex flex-column justify-content-center align-items-center overflow-auto">
 
+    <div class="sideBarContent">
+        <a th:href="@{/admin/dashboard}"><h4>DASHBOARD</h4></a>
 
-        </div>
     </div>
-</nav>
+    <div class="sideBarContent">
+        <a th:href="@{/admin/products/}"><h4>PRODUCTS</h4></a>
 
+    </div>
+    <div class="sideBarContent">
+        <a th:href="@{/admin/customers}"><h4>CUSTOMERS</h4></a>
+
+    </div>
+    <div class="sideBarContent">
+        <a th:href="@{/admin/category/}"><h4>CATEGORIES</h4></a>
+
+    </div>
+    <div class="sideBarContent">
+        <a th:href="@{/admin/brand/}"><h4>BRANDS</h4></a>
+
+    </div>
+    <div class="logoutBtn d-flex justify-content-center align-items-center">
+        <a th:href="@{/logout}" class="btn btn-danger"><h4>LOG OUT</h4></a>
+    </div>
+
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
