--- a/src/main/resources/templates/admin/getProducts.html
+++ b/src/main/resources/templates/admin/getProducts.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Admin Get Products</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lenscraft - Admin productList</title>
+    <link th:rel="stylesheet" th:href="@{/css/product-list.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 </head>
-<body>
-    This page is to get product list
+<body class="container-fluid">
+<div th:replace="~{fragment::navBarAdmin}"></div>
+<div style="height: 70px" class="row"></div>
+<div class="d-flex justify-content-end p-5">
+    <a class="btn btn-primary me-5" th:href="@{/admin/products/add}">add product</a>
+</div>
+<div class="row w-100 d-flex justify-content-center align-items-center">
+    <table class="overflow-auto">
+        <thead class="thead-dark bg-secondary  text-white">
+        <tr>
+            <th>Product</th>
+            <th>Product id</th>
+            <th>Stock Status</th>
+            <th>Prize</th>
+            <th>Frame size</th>
+            <th>Frame length</th>
+            <th>Frame Colors</th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="product : ${products}" class="table-info">
+            <td th:text="${product.productName}"></td>
+            <td th:text="${product.productId}"></td>
+            <td th:if="${product.stockStatus=='IN_STOCK'}"  class="text-success">IN_STOCK</td>
+            <td th:if="${product.stockStatus=='OUT_OF_STOCK'}"  class="text-danger">OUT_OF_STOCK</td>
+            <td th:if="${product.stockStatus=='LOW_STOCK'}"  class="text-warning">LOW_STOCK</td>
+            <td th:text="${product.price}"  class="text-primary"></td>
+            <td th:text="${product.frameSize}"></td>
+            <td th:text="${product.frameLength}"></td>
+            <td>
+                <div th:each="variable : ${product.variables}">
+                    <div th:style="|width: 10px; height: 10px; background: ${variable.frameColor}"></div>
+                    <br>
+                </div>
+            </td>
+            <td><a type="button" th:href="@{/admin/products/edit/{id}(id=${product.productId})}" class="btn btn-warning">EDIT</a></td>
+            <td><a type="button" th:href="@{/admin/products/delete/{id}(id=${product.productId})}" class="btn btn-danger">DELETE</a></td>
+            <td><a type="button" th:href="@{/admin/products/get-variables/{id}(id=${product.productId})}" class="btn btn-info">EDIT VARIABLE</a></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
