--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -25,7 +26,7 @@
         <form th:action="@{/login}" method="post">
             <div class="form-group">
                 <label for="emailId">Email Id</label>
-                <input type="text" class="form-control" id="emailId" placeholder="Enter Your Email Id" name="emailId">
+                <input type="text" class="form-control" id="emailId" placeholder="Enter Your Email Id" name="username">
             </div>
             <div class="form-group">
                 <label for="password">password</label>
