--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verification</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -13,7 +14,7 @@
 
         <nav class="row navDiv">
             <div class="row container h-auto">
-                <div class="col-3 navLogo">
+                <div class="col-sm-4 col-md-4 col-lg-3 col-xl-2 col-xxl-2 navLogo">
                     <img th:src="@{/images/Mainlogo.png}" class="w-100 h-100">
                 </div>
 
